feat: add booking with detail and update crud
