# docs/swagger.json
@@ -56,29 +56,6 @@
                 }
             }
         },
-        "/booking/discount": {
-            "get": {
-                "description": "Get a list of Booking with Discount.",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Booking"
-                ],
-                "summary": "Get All Booking With Discount.",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Booking"
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/booking/{id}": {
             "get": {
                 "description": "Get a Booking by ID.",
@@ -174,16 +151,16 @@
                 }
             }
         },
-        "/booking/{id}/discount": {
+        "/booking/{id}/detail": {
             "get": {
-                "description": "Get a Booking by ID with Discount.",
+                "description": "Get a Booking by ID with Detail.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Booking"
                 ],
-                "summary": "Get Booking by ID with Discount.",
+                "summary": "Get Booking by ID with Detail.",
                 "parameters": [
                     {
                         "type": "string",
@@ -256,6 +233,33 @@
             }
         },
         "/bookingtype/{id}": {
+            "get": {
+                "description": "Get a Booking Type by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Booking Type"
+                ],
+                "summary": "Get Booking Type by ID.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.BookingType"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Delete a Booking Type by id.",
                 "produces": [
@@ -376,6 +380,33 @@
             }
         },
         "/cars/{id}": {
+            "get": {
+                "description": "Get a Cars by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Cars"
+                ],
+                "summary": "Get Cars by ID.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Cars"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Delete a Cars by id.",
                 "produces": [
@@ -496,6 +527,33 @@
             }
         },
         "/customer/{id}": {
+            "get": {
+                "description": "Get a Customer by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Get Customer by ID.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Customer"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Delete a Customer by id.",
                 "produces": [
@@ -563,6 +621,153 @@
                 }
             }
         },
+        "/driver": {
+            "get": {
+                "description": "Get a list of Driver.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver"
+                ],
+                "summary": "Get All Driver.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Driver"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a new Driver.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver"
+                ],
+                "summary": "Create New Driver.",
+                "parameters": [
+                    {
+                        "description": "The body to create a new Driver",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.driverInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Driver"
+                        }
+                    }
+                }
+            }
+        },
+        "/driver/{id}": {
+            "get": {
+                "description": "Get a Driver by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver"
+                ],
+                "summary": "Get Driver by ID.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Driver"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a Driver by id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver"
+                ],
+                "summary": "Delete one driver.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Driver ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "boolean"
+                            }
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "Update Driver by id.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver"
+                ],
+                "summary": "Update Driver.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Driver ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "The body to update an Driver",
+                        "name": "Body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.driverInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Driver"
+                        }
+                    }
+                }
+            }
+        },
         "/driverincentive": {
             "get": {
                 "description": "Get a list of Driver Incentive.",
@@ -616,6 +821,33 @@
             }
         },
         "/driverincentive/{id}": {
+            "get": {
+                "description": "Get a Driver by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Driver Incentive"
+                ],
+                "summary": "Get Driver by ID.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Driver"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Delete a Driver Incentive by id.",
                 "produces": [
@@ -736,6 +968,33 @@
             }
         },
         "/membership/{id}": {
+            "get": {
+                "description": "Get a Membership by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Membership"
+                ],
+                "summary": "Get Membership by ID.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Membership"
+                        }
+                    }
+                }
+            },
             "delete": {
                 "description": "Delete a Membership by id.",
                 "produces": [
@@ -808,17 +1067,23 @@
         "controllers.bookingInput": {
             "type": "object",
             "required": [
+                "booking_type_id",
                 "cars_id",
                 "customer_id",
                 "end_rent",
-                "start_rent",
-                "total_cost"
+                "start_rent"
             ],
             "properties": {
+                "booking_type_id": {
+                    "type": "integer"
+                },
                 "cars_id": {
                     "type": "integer"
                 },
                 "customer_id": {
+                    "type": "integer"
+                },
+                "driver_id": {
                     "type": "integer"
                 },
                 "end_rent": {
@@ -829,9 +1094,6 @@
                 },
                 "start_rent": {
                     "type": "string"
-                },
-                "total_cost": {
-                    "type": "integer"
                 }
             }
         },
@@ -906,6 +1168,29 @@
                 }
             }
         },
+        "controllers.driverInput": {
+            "type": "object",
+            "required": [
+                "daily_cost",
+                "name",
+                "nik",
+                "phone_number"
+            ],
+            "properties": {
+                "daily_cost": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nik": {
+                    "type": "integer"
+                },
+                "phone_number": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.membershipInput": {
             "type": "object",
             "required": [
@@ -954,6 +1239,12 @@
                 "customer_id": {
                     "type": "integer"
                 },
+                "discount": {
+                    "type": "integer"
+                },
+                "driver": {
+                    "$ref": "#/definitions/models.Driver"
+                },
                 "driver_id": {
                     "type": "integer"
                 },
@@ -970,6 +1261,9 @@
                     "type": "string"
                 },
                 "total_cost": {
+                    "type": "integer"
+                },
+                "total_driver_cost": {
                     "type": "integer"
                 },
                 "updated_at": {
@@ -1047,6 +1341,37 @@
                     "$ref": "#/definitions/models.Membership"
                 },
                 "membership_id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "nik": {
+                    "type": "integer"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Driver": {
+            "type": "object",
+            "required": [
+                "name",
+                "nik",
+                "phone_number"
+            ],
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "daily_cost": {
+                    "type": "integer"
+                },
+                "id": {
                     "type": "integer"
                 },
                 "name": {
