# routes/routes.go
@@ -17,40 +17,43 @@ func SetupRouter(db *gorm.DB, r *gin.Engine) {
 
 	// Customer Router
 	r.GET("/customer", controllers.GetAllCustomer)
+	r.GET("/customer/:id", controllers.GetCustomerbyID)
 	r.POST("/customer", controllers.CreateCustomer)
 	r.PATCH("/customer/:id", controllers.UpdateCustomer)
 	r.DELETE("/customer/:id", controllers.DeleteCustomer)
-	r.GET("/bookingdiscount", controllers.GetAllBookingWithDiscount)
 
 	// Cars Router
 	r.GET("/cars", controllers.GetAllCars)
+	r.GET("/cars/:id", controllers.GetCarsByID)
 	r.POST("/cars", controllers.CreateCars)
 	r.PATCH("/cars/:id", controllers.UpdateCars)
 	r.DELETE("/cars/:id", controllers.DeleteCars)
 
 	// Booking Router
 	r.GET("/booking", controllers.GetAllBooking)
-	r.GET("/booking/:id", controllers.GetBookingbyID)
-	r.GET("/booking/discount", controllers.GetAllBookingWithDiscount)
-	r.GET("/booking/:id/discount", controllers.GetBookingbyIDWithDiscount)
+	r.GET("/booking/:id", controllers.GetBookingByID)
+	r.GET("/booking/:id/detail", controllers.GetBookingbyIDWithDetail)
 	r.POST("/booking", controllers.CreateBooking)
 	r.PATCH("/booking/:id", controllers.UpdateBooking)
 	r.DELETE("/booking/:id", controllers.DeleteBooking)
 
 	// Membership Router
 	r.GET("/membership", controllers.GetAllMembership)
+	r.GET("/membership/:id", controllers.GetMembershipByID)
 	r.POST("/membership", controllers.CreateMembership)
 	r.PATCH("/membership/:id", controllers.UpdateMembership)
 	r.DELETE("/membership/:id", controllers.DeleteMembership)
 
 	// Booking Type Router
 	r.GET("/bookingtype", controllers.GetAllBookingType)
+	r.GET("/bookingtype/:id", controllers.GetBookingTypeByID)
 	r.POST("/bookingtype", controllers.CreateBookingType)
 	r.PATCH("/bookingtype/:id", controllers.UpdateBookingType)
 	r.DELETE("/bookingtype/:id", controllers.DeleteBookingType)
 
 	// Driver Incentive Router
 	r.GET("/driverincentive", controllers.GetAllDriverIncentive)
+	r.GET("/driverincentive/:id", controllers.GetDriverIncentiveByID)
 	r.POST("/driverincentive", controllers.CreateDriverIncentive)
 	r.PATCH("/driverincentive/:id", controllers.UpdateDriverIncentive)
 	r.DELETE("/driverincentive/:id", controllers.DeleteDriverIncentive)
